Update about section

--- a/index.html
+++ b/index.html
@@ -40,14 +40,18 @@
             </div>
             <div class="about-col-2">
               <h1 class="sub-title" data-aos="fade-left" data-aos-duration="1000">About me</h1>
-              <p data-aos="fade-left" data-aos-duration="1000">I love coding, the challenge that each problem brings with it excites me. 
+              <p data-aos="fade-left" data-aos-duration="1000">Hi, there I am Subroto Banerjee and I am an Engineering Student at Indian Institute of Information Technology, Kalyani. I love coding, the challenge that each problem brings with it excites me. 
                 I use Java as main coding language, I am learning C at my college,I am also a Postman Student Expert, I love self learning, and acquiring different skills.
-                I am also involved in my college in some tech building stuff.
-                I also share my learnings regularly on twitter through my tweets.  
+                I am also involved in my college in building websites for hackathons in team, so I have teamwork experience as well. I also am working as PR Team member for a hackathon that my college is about to host.
+                I have social media managing experience also as I am part of various tech clubs in my college, organising tech events and manage the social handles of those clubs. 
+                I also have recently started writing blogs on hashnode.
+                I am core member of many non-tech clubs of my college as well, like sports, cultural - singing, drama, literary club, and have organised various events by those clubs.
+                I also like participating in debates and other oratory activities.
+                I also share my learnings regularly on twitter through my tweets, and also put that on linkedin as well.  
                 I am very active on social media platforms, as I like interacting with people from various fields and places. I believe learning is sharing. 
                 Also , I am a die hard hiphop fan, I put my music on youtube as well. 
                 I also am an occasional Vlogger, and I put my vlogging videos also on youtube. 
-                I edit my vlogs myself so I am a bit of video editor myself. 
+                I edit my vlogs myself so I am a bit of video editor myself. Also, I like writing, I write articles , blogs, songs, raps etc. I believe I may take this to a bigger level for sure in future. 
                 I am exploring different fields right now, currently I am learning web dev, exploring its capabilities and building my prowess in it</p>
               <div class="tab-titles" data-aos="fade-right" data-aos-duration="1000">
                 <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
@@ -57,9 +61,14 @@
                 <ul>
                   <li><span>Java</span><br>Programmer</li>
                   <li><span>C</span><br>Programmer</li>
+                  <li><span>C++</span><br>Programmer</li>  
                   <li><span>Python</span><br>Programmer</li>
-                  <li><span>HTML, CSS, Javascript</span><br>Web developement</li>
+                  <li><span>HTML, CSS, Javascript</span><br>Front-end Web developement</li>
+                  <li><span>Writing</span><br>Blogs, Songs, Articles</li>
+                  <li><span>PR Work</span><br>Have some experience in it</li>
+                  <li><span>Management Work</span><br>Organising many tech and non-tech events</li>  
                   <li><span>Linux</span><br>Able to work on it efficiently</li>
+                  <li><span>Figma</span><br>Have build some projects using it</li>  
                 </ul>
               </div>
               <div class="tab-contents" id="education">
