last updates in about

--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
               </div>
               <div class="tab-contents active-tab" id="skills" data-aos="fade-left" data-aos-duration="1000">
                 <ul>
-                  <li><span>Java</span><br>Programmer</li>
-                  <li><span>C</span><br>Programmer</li>
-                  <li><span>C++</span><br>Programmer</li>  
-                  <li><span>Python</span><br>Programmer</li>
+                  <li><span>Java, C, C++, Python </span><br>Programmer</li>
                   <li><span>HTML, CSS, Javascript</span><br>Front-end Web developement</li>
                   <li><span>Writing</span><br>Blogs, Songs, Articles</li>
                   <li><span>PR Work</span><br>Have some experience in it</li>
