Arranged items a bit

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <div id="header">
       <div class="container">
         <nav >
-          <img src="logo.png" class="logo" alt="">
+          <img src="img/logo.png" class="logo" alt="">
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#">Other Ventures</a></li>
             <li><a href="#contact">Contact</a></li>
-            <img src="cross-removebg-preview.png" class="img" onclick="closemenu()">
+            <img src="img/cross-removebg-preview.png" class="img" onclick="closemenu()">
           </ul>
-          <img src="menu-removebg-preview.png" id="menu" class="img" onclick="openmenu()">
+          <img src="img/menu-removebg-preview.png" id="menu" class="img" onclick="openmenu()">
         </nav>
         <div class="header-text" data-aos="fade-right" data-aos-duration="1000">
           <p>Frontend Developer and Java/C Programmer</p>
@@ -36,7 +36,7 @@
         <div class="container">
           <div class="row">
             <div class="about-col-1">
-              <img src="WhatsApp Image 2023-03-26 at 5.48.29 PM.jpeg" data-aos="fade-right" data-aos-duration="1000" alt="">
+              <img src="img/WhatsApp Image 2023-03-26 at 5.48.29 PM.jpeg" data-aos="fade-right" data-aos-duration="1000" alt="">
             </div>
             <div class="about-col-2">
               <h1 class="sub-title" data-aos="fade-left" data-aos-duration="1000">About me</h1>
@@ -84,13 +84,13 @@
           <h1 class="sub-title" data-aos="fade-right" data-aos-duration="1000">Projects</h1>
           <div class="project-list" data-aos="fade-left" data-aos-duration="1000">
             <div class="work">
-              <img src="restaurant.jpg">
+              <img src="img/restaurant.jpg">
               <div class="layer">
                 <h3>Basic Restaurant Management and Billing System</h3>
                 <p>
                   This shows the user menu, takes order (from the guy at cash counter's perspective)
                   and prepares a bill. It also stores the data date and order numberwise in a text file.
-                  <a href="https://github.com/TeeWrath/Basic-Restaurant-Management-and-Billing-System"><img src="link_icon-removebg-preview.png" id="link-icon" alt=""></a>
+                  <a href="https://github.com/TeeWrath/Basic-Restaurant-Management-and-Billing-System"><img src="img/link_icon-removebg-preview.png" id="link-icon" alt=""></a>
                 </p>
               </div>
             </div>
@@ -104,14 +104,14 @@
           <div class="row">
             <div class="contact-left" data-aos="fade-right" data-aos-duration="1000">
               <h1 class="sub-title contactme">Contact Me</h1>
-              <p><img src="email-removebg-preview.png" alt=""> subroto.2003@gmail.com</p>
-              <p><img src="phone-removebg-preview.png" alt=""> +91 8954402360</p>
+              <p><img src="img/email-removebg-preview.png" alt=""> subroto.2003@gmail.com</p>
+              <p><img src="img/phone-removebg-preview.png" alt=""> +91 8954402360</p>
               <div class="social-icons">
-                <a href="https://www.facebook.com/subroto.banerjee.56?mibextid=ZbWKwL" target="_blank" class="fb"><img src="facebook-removebg-preview.png"></a>
-                <a href="https://www.instagram.com/subroto._banerjee" target="_blank" class="insta"><img src="insta-removebg-preview.png"></a>
-                <a href="https://www.linkedin.com/in/subroto-banerjee-70983b214" target="_blank" class="linkedin"><img src="linkedin-removebg-preview.png"></a>
-                <a href="https://twitter.com/Subroto0108?t=C__765SW7dm6EDEYRj6odg&s=09" target="_blank" class="tw"><img src="twitter-removebg-preview.png"></a>
-                <a href="https://github.com/TeeWrath" target="_blank" class="git"><img src="github-removebg-preview.png"></a>
+                <a href="https://www.facebook.com/subroto.banerjee.56?mibextid=ZbWKwL" target="_blank" class="fb"><img src="img/facebook-removebg-preview.png"></a>
+                <a href="https://www.instagram.com/subroto._banerjee" target="_blank" class="insta"><img src="img/insta-removebg-preview.png"></a>
+                <a href="https://www.linkedin.com/in/subroto-banerjee-70983b214" target="_blank" class="linkedin"><img src="img/linkedin-removebg-preview.png"></a>
+                <a href="https://twitter.com/Subroto0108?t=C__765SW7dm6EDEYRj6odg&s=09" target="_blank" class="tw"><img src="img/twitter-removebg-preview.png"></a>
+                <a href="https://github.com/TeeWrath" target="_blank" class="git"><img src="img/github-removebg-preview.png"></a>
               </div>
               <a href="current resume.pdf" download class="btn btn2">Download Resume</a>
             </div>
