--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <a href="https://twitter.com/Subroto0108?t=C__765SW7dm6EDEYRj6odg&s=09" target="_blank" class="tw"><img src="img/twitter-removebg-preview.png"></a>
                 <a href="https://github.com/TeeWrath" target="_blank" class="git"><img src="img/github-removebg-preview.png"></a>
               </div>
-              <a href="current resume.pdf" download class="btn btn2">Download Resume</a>
+              <a href="docs/current resume.pdf" download class="btn btn2">Download Resume</a>
             </div>
             <div class="contact-right" data-aos="fade-left" data-aos-duration="1000">
               <form name="submit-to-google-sheet">
