--- a/index.html
+++ b/index.html
@@ -94,6 +94,42 @@
                 </p>
               </div>
             </div>
+            
+            <div class="work">
+              <img src="img/pyscript.png">
+              <div class="layer">
+                <h3>Todo List App - Pyscript</h3>
+                <p>
+                  This is a simple ToDo list application created using HTML, Tailwind CSS, and PyScript. It allows users to input tasks, create a checkbox, and mark the task as done. Once the task is marked as done, it is disabled, and a line is drawn through it. 
+                  An error message is displayed if the user attempts to add a task without inputting any text.
+                  <a href="https://github.com/TeeWrath/todo-app-pyscript"><img src="img/link_icon-removebg-preview.png" id="link-icon" alt=""></a>
+                </p>
+              </div>
+            </div>
+
+            <div class="work">
+              <img src="img/portfolio.png">
+              <div class="layer">
+                <h3>My Portfolio</h3>
+                <p>
+                  This is my personal portfolio website built using HTML, CSS and Javascript.
+                  <a href="https://github.com/TeeWrath/TeeWrath-Website"><img src="img/link_icon-removebg-preview.png" id="link-icon" alt=""></a>
+                </p>
+              </div>
+            </div>
+
+            <div class="work">
+              <img src="img/todo.png">
+              <div class="layer">
+                <h3>Todo App Using C</h3>
+                <p>
+                  The application aims to provide users with a platform to manage their tasks by allowing them to create, mark as completed, edit, and view todos based on specific dates or as a complete list. 
+                  The main challenge is to implement the required functionality while ensuring a user-friendly interface and efficient data management.
+                  <a href="https://github.com/TeeWrath/TeeWrath-Website"><img src="img/link_icon-removebg-preview.png" id="link-icon" alt=""></a>
+                </p>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
