--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <img src="img/menu-removebg-preview.png" id="menu" class="img" onclick="openmenu()">
         </nav>
         <div class="header-text" data-aos="fade-right" data-aos-duration="1000">
-          <p>Frontend Developer and Java/C Programmer</p>
+          <p>Aspiring Full Stack Developer and Programmer</p>
           <h1>Hi, I'm <span>Subroto Banerjee</span></h1>
-          <p>First year Student at <br> Indian Institute of Information Technology, Kalyani </p>
+          <p>Sophomore at Indian Institute of Information Technology, Kalyani </p>
         </div>
       </div>
     </div>
@@ -40,32 +40,30 @@
             </div>
             <div class="about-col-2">
               <h1 class="sub-title" data-aos="fade-left" data-aos-duration="1000">About me</h1>
-              <p data-aos="fade-left" data-aos-duration="1000">Hi, there I am Subroto Banerjee and I am an Engineering Student at Indian Institute of Information Technology, Kalyani. I love coding, the challenge that each problem brings with it excites me. 
-                I use Java as main coding language, I am learning C at my college,I am also a Postman Student Expert, I love self learning, and acquiring different skills.
-                I am also involved in my college in building websites for hackathons in team, so I have teamwork experience as well. I also am working as PR Team member for a hackathon that my college is about to host.
-                I have social media managing experience also as I am part of various tech clubs in my college, organising tech events and manage the social handles of those clubs. 
-                I also have recently started writing blogs on hashnode.
-                I am core member of many non-tech clubs of my college as well, like sports, cultural - singing, drama, literary club, and have organised various events by those clubs.
-                I also like participating in debates and other oratory activities.
-                I also share my learnings regularly on twitter through my tweets, and also put that on linkedin as well.  
-                I am very active on social media platforms, as I like interacting with people from various fields and places. I believe learning is sharing. 
-                Also , I am a die hard hiphop fan, I put my music on youtube as well. 
-                I also am an occasional Vlogger, and I put my vlogging videos also on youtube. 
-                I edit my vlogs myself so I am a bit of video editor myself. Also, I like writing, I write articles , blogs, songs, raps etc. I believe I may take this to a bigger level for sure in future. 
-                I am exploring different fields right now, currently I am learning web dev, exploring its capabilities and building my prowess in it</p>
+              <p data-aos="fade-left" data-aos-duration="1000">Hi , I am a Sophomore Engineering Undergraduate from Indian Institute of Information Technology , Kalyani . 
+                I am pursuing B.Tech in Electronics and Communication Engineering. 
+                I have a keen interest in Web and App development, open source , and writing. 
+                I also like to explore different technologies like blockchain, GameDev, Google Cloud, Web/App Development etc. 
+                I am also very active on different social media platforms and like to share my learnings on those platforms, I also am active in various tech communities. 
+                I have worked on various websites for hackathons organised by my college. I also have done PR work for them, managing the social handles of the tech club of my college. 
+                I like writing blogs , which I post on medium and hashnode. Apart from this, I am a die hard hip-hop fan, and sometimes produce my own music and post it on youtube. 
+                I have worked as a DevRel and Dev Evangelist Intern at a startup. I am learning Angular and Flutter development frameworks.
+                 I also am honing my DSA problem solving skills on LeetCode and trying to participate more in Competitive Programming.
+                I'm currently focussed on improving my skills in technology.</p>
               <div class="tab-titles" data-aos="fade-right" data-aos-duration="1000">
                 <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                 <p class="tab-links" onclick="opentab('education')">Education</p>
               </div>
               <div class="tab-contents active-tab" id="skills" data-aos="fade-left" data-aos-duration="1000">
                 <ul>
-                  <li><span>Java, C, C++, Python </span><br>Programmer</li>
-                  <li><span>HTML, CSS, Javascript</span><br>Front-end Web developement</li>
+                  <li><span>Java, C, C++, Python </span><br>Programming</li>
+                  <li><span>HTML, CSS, Javascript, Tailwind CSS</span><br>Front-end Web developement</li>
                   <li><span>Writing</span><br>Blogs, Songs, Articles</li>
-                  <li><span>PR Work</span><br>Have some experience in it</li>
+                  <li><span>PR Work</span><br>For Hackathons</li>
                   <li><span>Management Work</span><br>Organising many tech and non-tech events</li>  
-                  <li><span>Linux</span><br>Able to work on it efficiently</li>
-                  <li><span>Figma</span><br>Have build some projects using it</li>  
+                  <li><span>Angular</span><br>Web Framework</li>
+                  <li><span>Flutter</span><br>Mobile Framework</li>
+                  <li><span>Figma, Postman, Canva, Git, Github, ViteJs</span><br>Tools</li>  
                 </ul>
               </div>
               <div class="tab-contents" id="education">
@@ -164,7 +162,7 @@
         </div>
         </div>
         <div class="copyright">
-          <p>BY SUBROTO BANERJEE </p>
+          <p>MADE BY SUBROTO BANERJEE </p>
         </div>
       </div>
       <!--javascript-->
