other ventures commented

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#">Other Ventures</a></li>
+            <!-- <li><a href="#">Other Ventures</a></li> -->
             <li><a href="#contact">Contact</a></li>
             <img src="img/cross-removebg-preview.png" class="img" onclick="closemenu()">
           </ul>
