update: home page

--- a/index.html
+++ b/index.html
@@ -13,21 +13,28 @@
     <div id="header">
       <div class="container">
         <nav >
-          <img src="img/logo.png" class="logo" alt="">
+          <a href="#"><img src="img/lucifer.png" id="logo" alt=""></a>
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <!-- <li><a href="#">Other Ventures</a></li> -->
+            <li><a href="#">Achievements</a></li>
+            <li><a href="#projects">Work</a></li>
             <li><a href="#contact">Contact</a></li>
             <img src="img/cross-removebg-preview.png" class="img" onclick="closemenu()">
           </ul>
           <img src="img/menu-removebg-preview.png" id="menu" class="img" onclick="openmenu()">
         </nav>
-        <div class="header-text" data-aos="fade-right" data-aos-duration="1000">
-          <p>Aspiring Full Stack Developer and Programmer</p>
-          <h1>Hi, I'm <span>Subroto Banerjee</span></h1>
-          <p>Sophomore at Indian Institute of Information Technology, Kalyani </p>
+        <div class="header-content">
+          <div class="header-text" data-aos="fade-down" data-aos-duration="1000">
+            <p>Hi, I'm </p>
+            <h1><span>Subroto Banerjee</span></h1>
+            <p>A software developer, a programmer, a writer, a speaker and a rapper.
+              I am vocal about use and creation of Open Source Software and API literacy. I love learning and creating things.
+            </p>
+          </div>
+          <div>
+            <img src="/img/aboutimg.jpeg" alt="" data-aos="fade-down" data-aos-duration="1000">
+          </div>
         </div>
       </div>
     </div>
