--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="/img/lucifer.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subroto Banerjee</title>
@@ -9,14 +10,14 @@
      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://kit.fontawesome.com/5f230f3b92.js" crossorigin="anonymous"></script>
 </head>
-<body>  
+<body>
     <div id="header">
       <div class="container">
         <nav >
-          <a href="#"><img src="img/lucifer.png" id="logo" alt=""></a>
+          <a href="index.html"><img src="img/lucifer.png" id="logo" alt=""></a>
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="/about.html">About</a></li>
             <li><a href="#">Achievements</a></li>
             <li><a href="#projects">Work</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -39,7 +40,7 @@
       </div>
     </div>
     <!------------------about-------------->
-      <div id="about">
+      <!-- <div id="about">
         <div class="container">
           <div class="row">
             <div class="about-col-1">
@@ -82,7 +83,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!--PROJECTS-->
       <div id="projects">
         <div class="container">
@@ -173,47 +174,7 @@
         </div>
       </div>
       <!--javascript-->
-      <script>
-        var tablinks = document.getElementsByClassName("tab-links");
-        var tabcontents = document.getElementsByClassName("tab-contents");
-        function opentab(tabname){
-          for(tablink of tablinks){
-            tablink.classList.remove("active-link");
-          }
-          for(tabcontent of tabcontents){
-            tabcontent.classList.remove("active-tab");
-          }
-          event.currentTarget.classList.add("active-link");
-          document.getElementById(tabname).classList.add("active-tab");
-        }
-      </script>
-      <script>
-        var sidemenu = document.getElementById("sidemenu");
-        function openmenu(){
-          sidemenu.style.right = "0";
-        }
-        function closemenu(){
-          sidemenu.style.right = "-200px";
-        }
-      </script>
-      <script>
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbylbkURwSaKw1CbZ8J-DaJ1HR3vOQ822EoplacXLVEcMtQ01qmwOU2M3alBA659yurtfg/exec'
-        const form = document.forms['submit-to-google-sheet']
-        const msg = document.getElementById("msg");
-      
-        form.addEventListener('submit', e => {
-          e.preventDefault()
-          fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-            .then(response => {
-              msg.innerHTML = "Message Sent Successfully"
-              setTimeout(function(){
-                msg.innerHTML = ""
-              },5000)
-              form.reset()
-            })
-            .catch(error => console.error('Error!', error.message))
-        })
-      </script>
+      <script src="main.js"></script>
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
