feat: works page

--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
             <ul id="sidemenu">
               <li><a href="/index.html">Home</a></li>
               <li><a href="/about.html">About</a></li>
-              <li><a href="#">Achievements</a></li>
-              <li><a href="#projects">Work</a></li>
+              <!-- <li><a href="#">Achievements</a></li> -->
+              <li><a href="/Work.html">Work</a></li>
               <li><a href="#contact">Contact</a></li>
               <img src="img/cross-removebg-preview.png" class="img" onclick="closemenu()">
             </ul>
