--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="/about.html">About</a></li>
-            <li><a href="#">Achievements</a></li>
-            <li><a href="#projects">Work</a></li>
+            <!-- <li><a href="#">Achievements</a></li> -->
+            <li><a href="/Work.html">Work</a></li>
             <li><a href="#contact">Contact</a></li>
             <img src="img/cross-removebg-preview.png" class="img" onclick="closemenu()">
           </ul>
@@ -39,51 +39,6 @@
         </div>
       </div>
     </div>
-    <!------------------about-------------->
-      <!-- <div id="about">
-        <div class="container">
-          <div class="row">
-            <div class="about-col-1">
-              <img src="img/WhatsApp Image 2023-03-26 at 5.48.29 PM.jpeg" data-aos="fade-right" data-aos-duration="1000" alt="">
-            </div>
-            <div class="about-col-2">
-              <h1 class="sub-title" data-aos="fade-left" data-aos-duration="1000">About me</h1>
-              <p data-aos="fade-left" data-aos-duration="1000">Hi , I am a Sophomore Engineering Undergraduate from Indian Institute of Information Technology , Kalyani . 
-                I am pursuing B.Tech in Electronics and Communication Engineering. 
-                I have a keen interest in Web and App development, open source , and writing. 
-                I also like to explore different technologies like blockchain, GameDev, Google Cloud, Web/App Development etc. 
-                I am also very active on different social media platforms and like to share my learnings on those platforms, I also am active in various tech communities. 
-                I have worked on various websites for hackathons organised by my college. I also have done PR work for them, managing the social handles of the tech club of my college. 
-                I like writing blogs , which I post on medium and hashnode. Apart from this, I am a die hard hip-hop fan, and sometimes produce my own music and post it on youtube. 
-                I have worked as a DevRel and Dev Evangelist Intern at a startup. I am learning Angular and Flutter development frameworks.
-                 I also am honing my DSA problem solving skills on LeetCode and trying to participate more in Competitive Programming.
-                I'm currently focussed on improving my skills in technology.</p>
-              <div class="tab-titles" data-aos="fade-right" data-aos-duration="1000">
-                <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                <p class="tab-links" onclick="opentab('education')">Education</p>
-              </div>
-              <div class="tab-contents active-tab" id="skills" data-aos="fade-left" data-aos-duration="1000">
-                <ul>
-                  <li><span>Java, C, C++, Python </span><br>Programming</li>
-                  <li><span>HTML, CSS, Javascript, Tailwind CSS</span><br>Front-end Web developement</li>
-                  <li><span>Writing</span><br>Blogs, Songs, Articles</li>
-                  <li><span>PR Work</span><br>For Hackathons</li>
-                  <li><span>Management Work</span><br>Organising many tech and non-tech events</li>  
-                  <li><span>Angular</span><br>Web Framework</li>
-                  <li><span>Flutter</span><br>Mobile Framework</li>
-                  <li><span>Figma, Postman, Canva, Git, Github, ViteJs</span><br>Tools</li>  
-                </ul>
-              </div>
-              <div class="tab-contents" id="education">
-                <ul>
-                  <li><span>10+2 (2009-2021)</span><br>Kendriya Vidyalaya No. 2, Agra Cantt</li>
-                  <li><span>Bachelors in Technology (Electronics and Communication Engineering) (2022-2026)</span><br>Indian Institute of Information Technology, Kalyani</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
       <!--PROJECTS-->
       <div id="projects">
         <div class="container">
