--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="/about.html">About</a></li>
-            <!-- <li><a href="#">Achievements</a></li> -->
             <li><a href="/Work.html">Work</a></li>
             <li><a href="#contact">Contact</a></li>
             <img src="img/cross-removebg-preview.png" class="img" onclick="closemenu()">
@@ -39,64 +38,8 @@
         </div>
       </div>
     </div>
-      <!--PROJECTS-->
-      <div id="projects">
-        <div class="container">
-          <h1 class="sub-title" data-aos="fade-right" data-aos-duration="1000">Projects</h1>
-          <div class="project-list" data-aos="fade-left" data-aos-duration="1000">
-            <div class="work">
-              <img src="img/restaurant.jpg">
-              <div class="layer">
-                <h3>Basic Restaurant Management and Billing System</h3>
-                <p>
-                  This shows the user menu, takes order (from the guy at cash counter's perspective)
-                  and prepares a bill. It also stores the data date and order numberwise in a text file.
-                  <a href="https://github.com/TeeWrath/Basic-Restaurant-Management-and-Billing-System"><img src="img/link_icon-removebg-preview.png" id="link-icon" alt=""></a>
-                </p>
-              </div>
-            </div>
-            
-            <div class="work">
-              <img src="img/pyscript.png">
-              <div class="layer">
-                <h3>Todo List App - Pyscript</h3>
-                <p>
-                  This is a simple ToDo list application created using HTML, Tailwind CSS, and PyScript. It allows users to input tasks, create a checkbox, and mark the task as done. Once the task is marked as done, it is disabled, and a line is drawn through it. 
-                  An error message is displayed if the user attempts to add a task without inputting any text.
-                  <a href="https://github.com/TeeWrath/todo-app-pyscript"><img src="img/link_icon-removebg-preview.png" id="link-icon" alt=""></a>
-                </p>
-              </div>
-            </div>
-
-            <div class="work">
-              <img src="img/portfolio.png">
-              <div class="layer">
-                <h3>My Portfolio</h3>
-                <p>
-                  This is my personal portfolio website built using HTML, CSS and Javascript.
-                  <a href="https://github.com/TeeWrath/TeeWrath-Website"><img src="img/link_icon-removebg-preview.png" id="link-icon" alt=""></a>
-                </p>
-              </div>
-            </div>
-
-            <div class="work">
-              <img src="img/todo.png">
-              <div class="layer">
-                <h3>Todo App Using C</h3>
-                <p>
-                  The application aims to provide users with a platform to manage their tasks by allowing them to create, mark as completed, edit, and view todos based on specific dates or as a complete list. 
-                  The main challenge is to implement the required functionality while ensuring a user-friendly interface and efficient data management.
-                  <a href="https://github.com/TeeWrath/CLI-Todo-List-App"><img src="img/link_icon-removebg-preview.png" id="link-icon" alt=""></a>
-                </p>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       <!-------------------contact---------------------->
-      <div id="contact">
+      <!-- <div id="contact">
         <div class="container">
           <div class="row">
             <div class="contact-left" data-aos="fade-right" data-aos-duration="1000">
@@ -123,10 +66,11 @@
             </div>
           </div>
         </div>
-        </div>
-        <div class="copyright">
+        </div> -->
+
+        <!-- <div class="copyright">
           <p>MADE BY SUBROTO BANERJEE </p>
-        </div>
+        </div> -->
       </div>
       <!--javascript-->
       <script src="main.js"></script>
